src/snapshots/purring__parser__tests__minimal_g.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule G () where\n\ng :: G.G (G.G G G) -> G G G\ng g =\n  g\n    <#> G.g (\\k v -> G (G k) v)\n    # G.gfromFoldable\n        \")"
---
44 of 44
===
Module
 Header
  QProperName
   NULL
   ProperName
    8..9
  Decl::Sig
   Name
    20..21
   Typ::Arr
    Typ::App
     Typ::Constructor
      QProperName
       Qual
        25..27
       ProperName
        27..28
     Typ::App
      Typ::App
       Typ::Constructor
        QProperName
         Qual
          30..32
         ProperName
          32..33
       Typ::Constructor
        QProperName
         NULL
         ProperName
          34..35
      Typ::Constructor
       QProperName
        NULL
        ProperName
         36..37
    Typ::App
     Typ::App
      Typ::Constructor
       QProperName
        NULL
        ProperName
         42..43
      Typ::Constructor
       QProperName
        NULL
        ProperName
         44..45
     Typ::Constructor
      QProperName
       NULL
       ProperName
        46..47
  Decl::Def
   Name
    48..49
    Binder::Var
     Name
      50..51
   GuardedExpr::Unconditional
    Expr::Op
     Expr::Ident
      QName
       NULL
       Name
        56..57
     QOp
      NULL
      Op
       62..65
     Expr::Op
      Expr::App
       Expr::Ident
        QName
         Qual
          66..68
         Name
          68..69
       Expr::Paren
        Expr::Lambda
         71..72
          Binder::Var
           Name
            72..73
          Binder::Var
           Name
            74..75
         Expr::App
          Expr::App
           Expr::Constructor
            QProperName
             NULL
             ProperName
              79..80
           Expr::Paren
            Expr::App
             Expr::Constructor
              QProperName
               NULL
               ProperName
                82..83
             Expr::Ident
              QName
               NULL
               Name
                84..85
          Expr::Ident
           QName
            NULL
            Name
             87..88
      QOp
       NULL
       Op
        94..95
      Expr::Ident
       QName
        Qual
         96..98
        Name
         98..111
===
