src/snapshots/purring__parser__tests__normal_definition.snap
---
source: src/parser.rs
expression: "p_header(\"module A (a, b, c) where\")"
---
10 of 10
===
Header
 QProperName
  NULL
  ProperName
   7..8
  Export::Value
   Name
    10..11
  Export::Value
   Name
    13..14
  Export::Value
   Name
    16..17
===
