src/snapshots/purring__parser__tests__qualified_ado.snap
---
source: src/parser.rs
expression: "p_expr(r\" A.B.ado\n                    a <- f 2\n                    in a\n            \")"
---
17 of 17
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..11
  Decl::Def
   Name
    19..20
   GuardedExpr::Unconditional
    Expr::Ado
     Qual
      24..28
      DoStmt::Stmt
       Binder::Var
        Name
         52..53
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           57..58
        Expr::Number
         Number
          59..60
     Expr::Ident
      QName
       NULL
       Name
        84..85
===
