src/snapshots/purring__parser__tests__qualified_do.snap
---
source: src/parser.rs
expression: "p_expr(r\" A.B.do\n                    foo bar\n            \")"
---
13 of 13
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..11
  Decl::Def
   Name
    19..20
   GuardedExpr::Unconditional
    Expr::Do
     Qual
      24..28
      DoStmt::Stmt
       NULL
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           51..54
        Expr::Ident
         QName
          NULL
          Name
           55..58
===
