src/snapshots/purring__parser__tests__simple_import.snap
---
source: src/parser.rs
expression: "p_import(\"import A as A\")"
---
4 of 4
===
ImportDecl::As
 QProperName
  7..8
  ProperName
   7..8
 QProperName
  12..13
  ProperName
   12..13
===
