src/snapshots/purring__parser__tests__simple_joe_import.snap
---
source: src/parser.rs
expression: "p_import(\"import Joe\")"
---
2 of 2
===
ImportDecl::Bulk
 QProperName
  7..10
  ProperName
   7..10
===
