src/snapshots/purring__parser__tests__typ_a_signature.snap
---
source: src/parser.rs
expression: "p_typ(\"forall a. Monoid a => a -> a -> a\")"
---
18 of 18
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..10
  Decl::Sig
   Name
    18..19
   Typ::Forall
     TypVarBinding
      Name
       30..31
      NULL
    Typ::Constrained
     Constraint
      QProperName
       NULL
       ProperName
        33..39
       Typ::Var
        Name
         40..41
     Typ::Arr
      Typ::Var
       Name
        45..46
      Typ::Arr
       Typ::Var
        Name
         50..51
       Typ::Var
        Name
         55..56
===
