src/snapshots/purring__parser__tests__typ_b_simple_signature.snap
---
source: src/parser.rs
expression: "p_typ(\"Foo => Bar => b -> b\")"
---
15 of 15
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..10
  Decl::Sig
   Name
    18..19
   Typ::Constrained
    Constraint
     QProperName
      NULL
      ProperName
       23..26
    Typ::Constrained
     Constraint
      QProperName
       NULL
       ProperName
        30..33
     Typ::Arr
      Typ::Var
       Name
        37..38
      Typ::Var
       Name
        42..43
===
